Generates oauth token after form login with otp verification

--- a/authorizationServer/src/main/resources/templates/login.html
+++ b/authorizationServer/src/main/resources/templates/login.html
@@ -8,8 +8,7 @@
 </div>
 <div th:if="${param.otp}">
     <p class="text-danger">
-        For security reason, we've sent an One-Time-Password (OTP)
-        to your email [[${param.email}]]<br/>
+        For security reason, we've sent an One-Time-Password (OTP) to your email <br/>
         Kindly check your email and use the provided OTP to login.<br>
         Note: The OTP will expire after 5 minutes.
     </p>
