Draft functionality for login

--- a/authorizationServer/src/main/resources/templates/auth.html
+++ b/authorizationServer/src/main/resources/templates/auth.html
@@ -15,7 +15,7 @@
                 headers: {"Authorization": "Basic ZGVtby1jbGllbnQ6ZGVtby1zZWNyZXQ="},
                 success: function (response) {
                     const access_token = response.access_token;
-                    alert(access_token);
+                    //alert(access_token);
                 },
                 error: function (response) {
                 }
@@ -25,6 +25,6 @@
     </script>
 </head>
 <body>
-I AM HOME
+I AM AUTH
 </body>
 </html>
