--- a/authorizationServer/src/main/resources/templates/admin.html
+++ b/authorizationServer/src/main/resources/templates/admin.html
@@ -79,7 +79,7 @@
     <body>
     <div class="form">
         <h1>Administration Console Demo</h1>
-        <a href="http://localhost:8080/oauth2/authorize?response_type=code&client_id=admin-client" target="_blank">Click here to login</a>
+        <a href="http://localhost:8090/login" target="_blank">Click here to login</a>
         <!--<div class='container'>
             <h4>Not a member? Not a problem!</h4>
             <a th:href="@{/register}">Sign up</a>
