--- a/authorizationServer/src/main/resources/templates/admin.html
+++ b/authorizationServer/src/main/resources/templates/admin.html
@@ -68,6 +68,9 @@
             font-family: "Roboto", sans-serif;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
     </style>
